// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-ghbaIN {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary500);
    cursor: pointer;
    font-family: var(--fonts-sans);
    text-decoration: none;
  }

  .c-ghbaIN:focus,
  .c-ghbaIN:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-ghbaIN:active {
    color: var(--colors-primary500);
  }

  .c-dqbvHS > .c-ghbaIN,
  .c-fbjNGJ > .c-ghbaIN,
  .c-PJLV > .c-ghbaIN {
    font-size: 100%;
    line-height: 1;
  }

  .c-dqbvHS > .c-ghbaIN::before,
  .c-dqbvHS > .c-ghbaIN::after,
  .c-fbjNGJ > .c-ghbaIN::before,
  .c-fbjNGJ > .c-ghbaIN::after,
  .c-PJLV > .c-ghbaIN::before,
  .c-PJLV > .c-ghbaIN::after {
    content: none;
  }
}

@media  {
  .c-ghbaIN-ehWmjE-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.625;
  }

  .c-ghbaIN-ehWmjE-size-md::before {
    content: '';
    margin-bottom: -0.4489em;
    display: table;
  }

  .c-ghbaIN-ehWmjE-size-md::after {
    content: '';
    margin-top: -0.4489em;
    display: table;
  }
}

<div>
  <a
    class="c-ghbaIN c-ghbaIN-ehWmjE-size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-ghbaIN {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary500);
    cursor: pointer;
    font-family: var(--fonts-sans);
    text-decoration: none;
  }

  .c-ghbaIN:focus,
  .c-ghbaIN:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-ghbaIN:active {
    color: var(--colors-primary500);
  }

  .c-dqbvHS > .c-ghbaIN,
  .c-fbjNGJ > .c-ghbaIN,
  .c-PJLV > .c-ghbaIN {
    font-size: 100%;
    line-height: 1;
  }

  .c-dqbvHS > .c-ghbaIN::before,
  .c-dqbvHS > .c-ghbaIN::after,
  .c-fbjNGJ > .c-ghbaIN::before,
  .c-fbjNGJ > .c-ghbaIN::after,
  .c-PJLV > .c-ghbaIN::before,
  .c-PJLV > .c-ghbaIN::after {
    content: none;
  }
}

@media  {
  .c-ghbaIN-ehWmjE-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.625;
  }

  .c-ghbaIN-ehWmjE-size-md::before {
    content: '';
    margin-bottom: -0.4489em;
    display: table;
  }

  .c-ghbaIN-ehWmjE-size-md::after {
    content: '';
    margin-top: -0.4489em;
    display: table;
  }

  .c-ghbaIN-cNpDIo-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-ghbaIN-cNpDIo-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-ghbaIN-cNpDIo-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-ghbaIN c-ghbaIN-cNpDIo-size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
